# rpv3

./: .gitignore  CHANGELOG.md  CMakeLists.txt  C_vs_CPP_COMPARISON.md  LICENSE  Makefile  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v1.5.0.md  TODO.md  c_output.csv  c_sanitized.csv  cpp_output.csv  cpp_sanitized.csv  example_app.cpp  example_rocblas  example_rocblas.cpp  kernel_tracer.c  kernel_tracer.cpp  rpv3_options.c  rpv3_options.h
.github/: copilot-instructions.md
docs/: backtrace_research.md  counter_collection_research.md  csv_implementation_plan.md  csv_summary_tool_research.md  research_kernel_args.md  rocm_7.9.txt  rocm_7.9_strix_halo_research.md
tests/: CMakeLists.txt  README.md  mock_rocblas_logger.cpp  run_tests.sh  run_unit_tests.sh  test_backtrace.sh  test_counters.sh  test_csv_output.sh  test_csv_summary.py  test_errors.sh  test_integration.sh  test_output_options.sh  test_parity.sh  test_readme_examples.py  test_regression.sh  test_rocblas_file_relaxed.sh  test_rocblas_filter.sh  test_rocblas_log.sh  test_rocblas_multistep.sh  test_rocblas_timeline.sh  test_rpv3_options.c  test_timeline_flag.c  test_utils.sh
utils/: README.md  check_requirements.sh  check_status.cpp  diagnose_counters.cpp  summarize_trace.py  test_groups_logic.sh  test_groups_logic_fixed.sh
